--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sass": "^1.32.8"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "gh-pages": "^3.2.3",
     "notiflix": "^3.2.2",
     "simple-lightbox": "^2.1.0",
